<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_inicio"
        android:title="@string/menu_inicio"
        android:icon="@android:drawable/ic_menu_view" />

    <item
        android:id="@+id/menu_cart"
        android:title="@string/menu_carrito"
        android:icon="@android:drawable/ic_menu_add" />

    <item
        android:id="@+id/menu_profile"
        android:title="@string/menu_perfil"
        android:icon="@android:drawable/ic_menu_myplaces" />

    <!-- Solo visible para administradores -->
    <item
        android:id="@+id/menu_admin_product"
        android:title="@string/gestion_productos"
        android:icon="@android:drawable/ic_menu_manage"
        android:visible="false" />
</menu>
